--- a/my.css
+++ b/my.css
@@ -1,29 +1,31 @@
-.flexbox
 
-body header h1{
-    text-shadow: 0px 0px 0px rgb(160, 26, 26);
+
+header h1{
+    text-shadow: 2px 2px 2px rgb(160, 26, 26);
     text-align: center;
     text-decoration: aqua;
 }
-main{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-}
-body header p{
-    border-right: solid;
-}
-body header nav ul li a:link{
+
+header nav ul li a:link{
     color: green;
 }
-body header nav ul li a:visited{
+header nav ul li a:visited{
     color: red;
 }
-body header nav ul li a:hover{
+header nav ul li a:hover{
         color: blueviolet;
 }
-.box1{
-    border: solid;
-    background-color: aqua;
+.card{
+    display:flex;
+    height:200px;
+    flex-basis: 30%;
+    background-color: yellowgreen;
+    border: 5px solid coral;
+}
+#skills{
+    flex-basis: 100%;
+    background-color: yellowgreen; 
+    border: 5px solid coral;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
